framec_tests/language_specific/csharp/v3_facade_smoke/negative/strict_unfinished_generic.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $B();
                List<int x; // missing '>'
            }
        }
        $B {
        }
}

